# apple-notes-to-markdown

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
docs/: DEVELOPMENT_STATUS.md  NOTESNOOK_CODE_REFERENCE.md  NOTESNOOK_IMPLEMENTATION_GUIDE.md  NOTESNOOK_IMPORT_FORMAT.md  NOTESNOOK_RESEARCH_SUMMARY.md  README_NOTESNOOK_RESEARCH.md
notes_migrator/: __init__.py  apple_notes.py  cli.py  google_keep.py  notesnook_export.py  notestore.proto  notestore_pb2.py
notes_migrator/notes_migrator/: notestore_pb2.py
