[project]
name = "apple-notes-to-notesnook"
version = "0.1.0"
description = "Export Apple Notes to Notesnook markdown format"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "protobuf>=4.21.0",
]

[project.scripts]
notes-export = "notes_migrator.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
